@@ -1344,6 +1344,7 @@ Milan Zamazal
 Artur Zaprzala
 Mike Zarnstorff
 Siebren van der Zee
+Nickolai Zeldovich
 Yuxiao Zeng
 Uwe Zessin
 Cheng Zhang
